--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - workflow_dispatch
+  workflow_dispatch:
 jobs:
   test:
     runs-on: ubuntu-latest
