--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -30,13 +30,20 @@ jobs:
         uses: actions/upload-artifact@v4.4.3
         with:
           name: dist-files
-          path: |
-            dist
-            package.json
+          path: dist
+          # path: |
+          #   dist
+          #   package.json
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Upload artifacts
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: dist-files
+      - name: Display structure of downloaded files
+        run: ls -R dist
       - name: Deploy
         run: echo "Deploying..."
