--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,6 +19,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.output.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -26,6 +28,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4.4.3
         with:
@@ -41,9 +46,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Upload artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4.1.8
         with:
           name: dist-files
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
